Left align first resources tile text; fix for images in IE

--- a/_sass/website/landing-row.scss
+++ b/_sass/website/landing-row.scss
@@ -32,7 +32,7 @@ $landing-title-color: #4A4A4A;
             border-bottom: 1px solid #ddd;
             clear: both;
             margin-bottom: 0;
-            overflow: auto;
+            height: 100%;
 
             .landing-row__text {
                 float: right;
@@ -54,7 +54,6 @@ $landing-title-color: #4A4A4A;
 
                 .landing-row__title {
                     @include landing-subtext;
-
                     color: #4A4A4A;
                     margin-top: 0;
                     font-size: 17px;
@@ -201,12 +200,15 @@ $landing-title-color: #4A4A4A;
 
                     .landing-row__title {
                         font-size: 1.5rem;
+                        height: 87px;
                     }
                 }
 
                 .landing-row__image {
                     width: 100%;
+                    height: 100%;
                     margin: 0 auto 1rem;
+                    object-fit: contain;
                 }
             }
         }
@@ -224,6 +226,10 @@ $landing-title-color: #4A4A4A;
                         text-align: center;
                         width: auto;
 
+                        .landing-row__title {
+                          height: auto;
+                        }
+
                         .landing-row__p {
                             display: block;
                             font-size: 18px;
@@ -239,6 +245,9 @@ $landing-title-color: #4A4A4A;
                     &.landing-row__tile--primary {
                         .landing-row__text {
                             text-align: left;
+                            .landing-row__title {
+                              text-align: left;
+                            }
                         }
                     }
                 }
